[gd_scene load_steps=2 format=2]

[ext_resource path="res://Intro.gd" type="Script" id=1]

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -23.5
margin_right = 99.5
margin_bottom = 23.5
text = "Pranessa and Pmyl presents...

PRANESSA'S MANSION"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoMenu" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="FadingOut" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="GoMenu" to="." method="_on_GoMenu_timeout"]
[connection signal="timeout" from="FadingOut" to="." method="_on_FadingOut_timeout"]
